2010-01-26 Serdar Dalgıç <serdar@pardus.org.tr>
		* Handle urllib2 errors of dummy .part files created as a result of unreachable
		translations.xml's. Fixes #12136.

2010-01-23 Ozan Çağlayan <ozan@pardus.org.tr>
		* Add support for optional reverse="[tT]rue" in <Patch> for reverse applying
		a patch.

2010-01-22 Gökçen Eraslan <gokcen@pardus.org.tr>
		* pisi/actionsapi/perlmodules.py: Do not ignore parameter in make
		method (eg. perl Build test). Tests of some perl modules have never run
		before this commit.

2010-01-19 Ozan Çağlayan <ozan@pardus.org.tr>
		* pisi/specfile.py (_set_i18n): Handle parsing errors during
		translations.xml reading.
		* pisi/specfile.py (read_translations): Ignore source package
		translations if <Name> is empty in translations.xml.
		* pisi/version.py (VersionItem): Handle unknown keywords in version
		strings,
		* pisi/operations/build.py (Builder.__init__): Don't wait until
		creating .pisi file for borking about invalid version strings e.g.
		something like "0.5.6.1_x1219" in <Update> element.

2010-01-12 Ozan Çağlayan <ozan@pardus.org.tr>
		* pisi/actionsapi/get.py: Add ARCH() for getting host architecture.
		Thanks to 64-bit team for pointing out this requirement.

2010-01-04 Ozan Çağlayan <ozan@pardus.org.tr>
		* pisi/actionsapi/shelltools.py (unlink): Support glob patterns in
		unlink().

2009-12-21 Gökçen Eraslan <gokcen@pardus.org.tr>
		* pisi/actionsapi/cmaketools.py: Change CMake build type to
		RelWithDebInfo to get faster KDE packages.

2009-12-21 Fatih Aşıcı <fatih@pardus.org.tr>
		* pisi/cli/history.py: Fix exceptions raise after quitting history view.

2009-12-16 Serdar Dalgıç <serdar@pardus.org.tr>
		* pisi/cli/blame.py: Several enhancements in blame:
			- pisi bl works for LC_ALL=C
			- a new option "-a" / "--print-all": blame for all of the releases

2009-12-16 Serdar Dalgıç <serdar@pardus.org.tr>
		* pisi/operations/build.py: Warn if component.xml is not found in the